# uvp-core

./: .gitignore  Cargo.toml  README.md
crates/uvp-cli/: Cargo.toml
crates/uvp-cli/src/: main.rs
crates/uvp-compiler/: Cargo.toml
crates/uvp-compiler/src/: lib.rs
crates/uvp-ffi/: Cargo.toml
crates/uvp-ffi/include/: uvp_core.h
crates/uvp-ffi/src/: lib.rs
crates/uvp-hook-dsl/: Cargo.toml
crates/uvp-hook-dsl/src/: lib.rs
crates/uvp-hook-dsl/tests/: semantics_corpus.rs
crates/uvp-ir/: Cargo.toml
crates/uvp-ir/src/: lib.rs
crates/uvp-model/: Cargo.toml
crates/uvp-model/src/: lib.rs
crates/uvp-node/: Cargo.toml  index.cjs  index.d.ts  index.js  package.json
crates/uvp-node/src/: lib.rs
crates/uvp-replay/: Cargo.toml
crates/uvp-replay/src/: lib.rs
crates/uvp-replay/tests/: semantics_corpus.rs
docs/: init_prd.md
fixtures/hook/: semantics.v1.json
