[package]
name = "uvp-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
uvp-compiler.workspace = true
uvp-hook-dsl.workspace = true
uvp-replay.workspace = true
